website/translated_docs/it-IT/version-4.0.0/talks.md
---
id: version-4.0.0-talks
title: Presentazioni
original_id: talks
---

Elenchiamo le presentazioni su Verdaccio: se hai fatto o se in in procinto di fare una presentazione su Verdaccio o che menzioni questo progetto, aggiungila qui.

> Non esitare a condividere i tuoi contenuti con la community, ti incoraggiamo a parlare di Verdaccio. Se hai bisogno di aiuto su come iniziare, informazioni o risorse, raggiungici sulla nostra [Chat di Discord](https://chat.verdaccio.org), ti aiuteremo.

## L’ultima Presentazione <iframe width="960" height="540" src="https://www.youtube.com/embed/CnLA73E1BrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen mark="crwd-mark"></iframe> 

> Qui viene sempre messa in evidenza l'ultima presentazione condivisa. Ti supportiamo nel condividere la tua voce con la community.

* [Практический опыт работы с приватным хранилищем npm-пакетов (Verdaccio)](https://youtu.be/CnLA73E1BrE?t=10101) - [О Panda-Meetup](http://panda-meetup.ru/msk-frontend-meetup-2) - durata (2:48:23)
* [Madrid Node.js Meetup - Introducción a Verdaccio: gestión de paquetes privados, March 2019](https://www.todojs.com/introduccion-a-verdaccio/)
* [Vienna.js Meetuo - Introduction to Verdaccio, January 2019](https://www.youtube.com/watch?v=hDIFKzmoCaA)
* [#22 FloripaJS Brazil Meetup, February 2019](https://www.youtube.com/watch?v=iOp70_svQ_M&feature=youtu.be&t=7578)
* [FrankenJS Angular & Beyond - Enterprise-Architectures for huge Angular Apps by Manfred Steyer](https://youtu.be/dWdJkqhQFXU?t=613)
* [ngPoland 2017 - Manfred Steyer - Packages for Angular](https://youtu.be/3fMTdm7k_d0?t=662)
* [Kamil Warpechowski: Jak zapanować nad wspólnym kodem w wielu projektach? [PL] - WarsawJS Meetup #44](https://www.youtube.com/watch?v=JIlQ468xfbU&feature=youtu.be&t=609)
* [Architekturen für große Anwendungen im Angular-Umfeld - Manfred Steyer bei Frontend RheinMain @ AOE](https://youtu.be/eZ91bip6qm4?t=1010)
* [reating Enterprise Web Applications with Node.js #WeAreDevelopers2018](https://youtu.be/RWE6aV7p0Wk?t=682)
* [Architectures for Huge Angular Based Enterprise #WeAreDevelopers2018](https://youtu.be/q4XmAy6_ucw?t=551)
* [BxJS Weekly Ep. 13 - June 2, 2018 (javascript news podcast)](https://youtu.be/Xo8CzYGKXTs?list=PL_gX69xPLi-mqs5BJe-xPnOPT6K1Y5_ZQ&t=2732)

## Presentazioni Future

* [Madrid Node.js Meetup 5 Marzo 2019](https://www.meetup.com/es-ES/Node-js-Madrid/events/258299729/)

## Video Collegati

* [Local npm server](https://www.youtube.com/watch?v=vc2wMwcDKOE)
* [Private NPM Registry (sinopia+docker)](https://www.youtube.com/watch?v=0TXTCrGaxKc)